WEED-33 - Some UI fixes and model srt changes to better readability on admin (#73)

--- a/web/source/sass/pages/navbar.scss
+++ b/web/source/sass/pages/navbar.scss
@@ -68,6 +68,13 @@
             float: left;
             height: 4em;
             width: 4em;
+
+            img {
+                border-style: none;
+                width: 4em;
+                height: 4em;
+                padding: 0.25em;
+            }
         }
 
         .business-nav-menu-btn {
